RP-1078 Add support for referencing releases using URIs.  Check core module first, so that we don't waste time trying to do lookups of model + ICD10 module since they're included with core